src/test/ui/limits/issue-69485-var-size-diffs-too-large.stderr
error: values of the type `[u8; 18446744073709551615]` are too big for the current architecture
  --> $DIR/issue-69485-var-size-diffs-too-large.rs:6:12
   |
LL |     Bug::V([0; !0]);
   |            ^^^^^^^

error: aborting due to previous error

